--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,10 @@ var/
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
-# Environment variables
+# Environment variables - but keep .env.example for reference
 .env
 .env.local
+!.env.example
 
 # IDE
 .idea/
@@ -62,3 +63,5 @@ docs-tex/_29330223E96B4290E236A247AEC153FD.data.minted
 *.aux
 refs/
 base-codes/
+*.env
+.env
