refactor(database): migrate from influxdb to timescaledb for orderbook storage
- Replace InfluxDB with TimescaleDB for better relational data handling
- Update docker-compose.yml with TimescaleDB configuration
- Add new create_tables.py script for TimescaleDB schema setup
- Modify orderbook_loader.py to use PostgreSQL instead of InfluxDB
- Simplify .env.example by removing InfluxDB-specific settings

--- a/.env.example
+++ b/.env.example
@@ -1,29 +1,17 @@
 # MetaTrader 5 Market Depth Recorder - Environment Configuration
 # Copy this file to .env and update the values
-
-# Required: Trading symbol to monitor
-SYMBOL=EURUSD
-
-# Required: Timezone for timestamps (Asia/Nicosia is default)
+SYMBOL=XAUUSD
 TIMEZONE=Asia/Nicosia
+# PostgreSQL/TimescaleDB Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
 
-# Required: InfluxDB connection settings
-INFLUX_URL=http://localhost:8086
-INFLUX_TOKEN=your-influxdb-admin-token-here
-INFLUX_ORG=mt5-org
-INFLUX_BUCKET=orderbook_data
-
-# Optional: Performance tuning
 POLL_INTERVAL_MS=50
 WRITE_BATCH_SIZE=500
-WRITE_FLUSH_INTERVAL_MS=250
-
-# Required: MetaTrader 5 configuration
-MT5_TERMINAL_PATH=C:\Program Files\MetaTrader 5\terminal64.exe
-
-# Optional: MT5 login credentials (if needed)
-MT5_LOGIN=your_mt5_login
-MT5_PASSWORD=your_mt5_password
-MT5_SERVER=your_broker_server
-
-# Note: For security, never commit actual credentials to version control
+MT5_TERMINAL_PATH="C:\Program Files\metatrader5\terminal64.exe"
+MT5_LOGIN=
+MT5_PASSWORD=
+MT5_SERVER=
